# rust-playground

./: .gitignore  .gitignore.in  .octocov.yml  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  deny.toml  summary.json
.cargo/: config.toml
.github/: gh-counter.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: binary-release.yml  cratesio-publish.yml  gh-counter.yml  happy.yml  octocov.yml  pypi-publish.yml  shared-library-release.yml  spellcheck.yml  test.yml  wasm-npm-publish.yml  wasm.yml
c1/: Cargo.toml  README.md
c1/src/: main.rs
c2/: Cargo.toml
c2/src/: lib.rs
checkpoint/: Cargo.toml  README.md
checkpoint/src/: id.rs  lib.rs
counters/: type-ignore.json
python/: .gitignore  Cargo.toml  README.md  pyproject.toml  setup.cfg
python/pysrc/kitsuyui_rust_playground/: __init__.py  kitsuyui_rust_playground.pyi
python/src/: lib.rs
python/tests/: test_kitsuyui_rust_playground.py
src/: main.rs
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs
