[workspace.package]
version = "0.1.8"
edition = "2021"
authors = ["Yui Kitsu <kitsuyui+github@kitsuyui.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kitsuyui/rust-playground"

[workspace.dependencies]
openssl-probe = "0.1.5"
reqwest = { version = "0.12.0", features = ["blocking"] }
ring = "0.17.8"
hex = "0.4.3"
tokio = "1.36.0"
pyo3 = { version = "0.20.3", features = ["extension-module"] }
pyo3-build-config = "0.20.3"

[workspace.dependencies.openssl]
version = "0.10.64"
features = ["vendored"]

[workspace]

resolver = "2"
members = [
    "c1",
    "c2",
    "python",
    "wasm",
]

default-members = [
    "c1",
    "c2",
]