[package]
name = "kitsuyui-rust-playground"
description = "Here is my Rust playground."
license = "MIT OR Apache-2.0"
version.workspace = true
authors.workspace = true
edition.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl-probe.workspace = true
reqwest.workspace = true
ring.workspace = true
hex.workspace = true
tokio.workspace = true
openssl.workspace = true