[package]
name = "kitsuyui-rust-playground-lib"
description = "Here is my Rust playground."
license = "MIT OR Apache-2.0"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
