[package]
name = "python"
description = "Python bindings for kitsuyui-rust-playground"
license = "MIT OR Apache-2.0"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "kitsuyui_rust_playground"
crate-type = ["cdylib"]

[dependencies]
pyo3.workspace = true
kitsuyui-rust-playground-lib = { path = "../c2" }
pyo3-build-config.workspace = true

[dev-dependencies]
maturin = "0.14.13"

[package.metadata.maturin]

python-source = "pysrc"
