[tool.poetry]
name = "kitsuyui_rust_playground"
version = "0.1.5"
description = ""
authors = ["kitsuyui <kitsuyui@kitsuyui.com>"]
readme = "README.md"
packages = []

[project]
name = "kitsuyui_rust_playground"

[build-system]
requires = ["maturin"]
build-backend = "maturin"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
maturin = "*"
pytest = "*"
pytest-cov = "*"
atomicwrites = "*"
