[project]
name = "kitsuyui_rust_playground"
version = "0.1.5"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "kitsuyui", email = "kitsuyui@kitsuyui.com" },
]
classifiers = [
    "Private :: Do Not Upload",
]

[tool.maturin]
python-source = "pysrc"
module-name = "kitsuyui_rust_playground._native"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "maturin",
    "pytest",
    "pytest-cov",
    "atomicwrites",
    "mypy",
    "ruff",
    "poethepoet",
]

[tool.uv]
exclude-newer = "2 days"

[tool.poe]
executor = { type = "uv", group = "dev" }

[tool.poe.tasks]

format = "ruff format pysrc/ tests/"
check-all = [
    {cmd = "ruff check", cwd = "pysrc"},
    {cmd = "ruff check", cwd = "tests"},
    {cmd = "mypy pysrc"}, 
]
dev-build = [
    {cmd = "maturin develop"},
]
build = [
    {cmd = "maturin build --release"},
]
test = [
    "dev-build",
    {cmd = "pytest tests/ --cov=pysrc/ --cov-report=term-missing"},
]

[tool.mypy]
strict = true
ignore_missing_imports = false

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "C4",
    "C90",
    "E",
    "F",
    "I",
    "PERF",
    "PLE",
    "PTH",
    "RET",
    "RUF",
    "S",
    "SIM",
    "SLOT",
    "UP",
    "W",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "D", "S101"]
