[metadata]
name = kitsuyui_rust_playground
description = example of using rust in python
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
author = Yui Kitsu
author_email = kitsuyui+github@kitsuyui.com
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
